//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id Int [pk, increment]
  email String [unique, not null]
  username String [unique, not null]
  password String [not null]
  playlists playlist [not null]
}

Table Channel {
  id String [pk]
  title String [default: '']
  description String [default: '']
  country String [default: '']
  publishedAt DateTime
  thumbnails Json
  category ChannelCategory [not null, default: 'Streamer']
  videos Video [not null]
  channelGroups ChannelGroupsOnChannels [not null]
}

Table ChannelGroup {
  id Int [pk, increment]
  name String [unique, not null]
  channels ChannelGroupsOnChannels [not null]
}

Table ChannelGroupsOnChannels {
  channel Channel [not null]
  channelId String [not null]
  channelGroup ChannelGroup [not null]
  channelGroupId Int [not null]
  assignedAt DateTime [default: `now()`, not null]

  indexes {
    (channelGroupId, channelId) [pk]
  }
}

Table Subject {
  id Int [pk, increment]
  name String [not null]
  videos SubjectsOnVideos [not null]
}

Table Video {
  id String [pk]
  channelId String [not null]
  title String [default: '']
  description String [default: '']
  publishedAt DateTime
  thumbnails Json
  status Json
  statistics Json
  liveStreamingDetails Json
  contentDetails Json
  tags String[] [not null]
  channel Channel [not null]
  subjects SubjectsOnVideos [not null]
}

Table SubjectsOnVideos {
  videoId String [not null]
  subjectId Int [not null]
  subject Subject [not null]
  video Video [not null]

  indexes {
    (subjectId, videoId) [pk]
  }
}

Table playlist {
  id Int [pk, increment]
  ownerId Int [not null]
  name String
  owner user [not null]
}

Enum ChannelCategory {
  Streamer
  Clipper
}

Ref: ChannelGroupsOnChannels.channelId > Channel.id

Ref: ChannelGroupsOnChannels.channelGroupId > ChannelGroup.id

Ref: Video.channelId > Channel.id

Ref: SubjectsOnVideos.subjectId > Subject.id

Ref: SubjectsOnVideos.videoId > Video.id

Ref: playlist.ownerId > user.id